adding version test endpoint
